case-files/5.5.26/trial.mts.now_wiki_key-themes.md
---
url: "https://trial.mts.now/wiki/key-themes"
title: "Key Themes — MTS Trial Wiki"
---

# Key Themes

The narratives both sides keep returning to. Each section links to the underlying quotes in the [daily digests](https://trial.mts.now/wiki/timeline).

* * *

## Plaintiffs' framing

### "Stole a charity"

Plaintiffs' single most-repeated line. Musk used it three times in cross alone. `(043026TT.txt:1270, 1290, 1736)`

- Molo opening: "We're here today because the defendants in this case **stole a charity**, and we're going to ask you to hold them accountable." `(042826TT.txt:1284)`
- Musk on direct: "If the verdict comes up that effectively makes it OK to loot a charity, the entire foundation of charitable giving in America will be destroyed. That's my concern." `(042826TT.txt:4204)`
- The **museum-store analogy**: "The museum store can't loot the museum, sell the Picassos, and pocket the profits. It's got to fund the nonprofit's issue." `(042826TT.txt:1594)`
- Musk in cross, after being asked why he hadn't started his own AI nonprofit in eight years: "Well, I thought I had started a nonprofit with OpenAI, but it turns out **they stole the charity** and turned it into a for-profit." `(043026TT.txt:2031)`
- Musk's "stolen car" timing analogy on direct: "Thinking that someone might steal your car is not the same as if someone has stolen your car... I concluded that the car had indeed been stolen, meaning the nonprofit had been looted, they stole a charity, was my conclusion, in 2023." `(042926TT.txt:2523)`

### Musk's "three phases"

Musk's organizing narrative for the timeline of his disillusionment — and his answer to the statute-of-limitations defense.

- "Phase one — enthusiastically supportive. Phase two — a little uncertain. Phase three — they're looting the nonprofit. We're currently in phase three." `(042926TT.txt:2133)`
- Cross: "When was phase two?" "I started feeling uncomfortable around 2017, 2018, and then that progressed to extreme discomfort in late '22 and '23." `(042926TT.txt:7148)`
- Recross attempt to pin a 2020 break-the-deal date: Musk: "No. That's because I became uncomfortable in 2020." `(043026TT.txt:3594)`

### "I was a fool"

Musk's repeated framing of his own role.

- "Well, I actually was a **fool** who provided free funding for them to create a startup. I literally was... I gave them, you know, $38 million of essentially free funding, which they then used to create an $800 billion for-profit company." `(042926TT.txt:1599)`
- "I understood that what Sam Altman was saying is that OpenAI would remain a nonprofit. And I believed him... So I was **foolish enough** to believe him." `(042926TT.txt:1636)`

### Greg Brockman's contributions ("zero")

A shorthand plaintiffs use — and Birchall confirmed on direct — to frame the equity dispute as a money question. Day 6 brought Brockman himself to the stand and made the picture concrete.

- Birchall: "Q. How much did Mr. Brockman contribute?

A. Zero." `(043026TT.txt:4416)`
- Plaintiffs' theory: those who contributed nothing now own equity in an $800B+ for-profit. Musk, who contributed everything, owns nothing.
- Brockman on Day 6: ownership stake **~$30 billion**, acquired in 2018 having paid **$0** for it. _(5/4/2026 Testimony @ ~09:11 PT — see [the Day 6 digest](https://trial.mts.now/day/6) §4h)_
- The October 2015 "I'm personally donating $100k" solicitation to Marissa Mayer — never paid. Brockman: "Did not end up donating. That's true." Q: "So that was a false statement." — "I disagree with that characterization." _(Day 6 @ ~09:14 PT)_
- The hidden **$10 million** family‑office equity grant from Sam Altman in 2017 (PX 350) that Brockman never disclosed to Musk; Musk forwarded the discovery to Brockman with "??". _(Day 6 @ ~10:08 PT)_
- The Cerebras conflict: Brockman acquired Cerebras equity March 17, 2017 while OpenAI was actively considering a Cerebras merger. Never told Musk. The same conflict carried through to OpenAI's December 2025 deal to buy ~$10 billion in Cerebras chips, after which Cerebras' valuation went from ~$8B to ~$23B. _(Day 6 @ ~10:17 PT and ~11:44 PT)_

* * *

## Defense's framing

### "Pageant of hypocrisy" / Tale of two Elons

Defense's framing.

- Savitt opening: "Mr. Musk's lawsuit is a **pageant of hypocrisy**." `(042826TT.txt:2177)`
- "What he cares about is Elon Musk being on top, and that's why we're here, members of the jury." `(042826TT.txt:2268)`
- "When OpenAI refused to be absorbed into Musk's empire, he just **picked up his marbles and went home** declaring that OpenAI's chances of success were exactly zero." `(042826TT.txt:2222)`
- "The evidence... could be summarized as a **tale of two Elons**." `(042826TT.txt:3101)`
- Musk dismissed OpenAI safety staff as " **jackasses**" at an all-hands. `(042826TT.txt:2674)`

### The $1B / $38M gap

The single most-repeated factual attack of the cross.

- Savitt opening: "As to his billion-dollar pledge, **Mr. Musk fell $960 million short**. He actually contributed less than 4 percent of what he promised." `(042826TT.txt:2736)`
- Musk in cross: "In strict monetary terms, I contributed 38 million." `(042926TT.txt:2898)`
- DX 1025 — Musk's March 15, 2023 tweet "$100 million to OpenAI"; under deposition: "I was mistaken." `(042926TT.txt:3030)`
- Birchall confirms the precise number on direct: **$38,191,066** in ~60 contributions (PX 112A). `(043026TT.txt:4291)`
- Birchall: For 2016–2017, Musk supplied "approximately 60 percent" of OpenAI's contributions; Altman "less than 10 percent"; Brockman "zero." `(043026TT.txt:4408–4416)`

### "Unequivocal control" (the 2017 negotiation breakdown)

Defense's pivot from "Musk-was-betrayed" to "Musk-wanted-control."

- Musk's own September 2017 emails (PX 156, DX 686): "I would have initially 51 percent of the company..." `(042926TT.txt:1365)`
- Cross: "So the idea is, you would have **unequivocal control** of this for-profit when it starts; right?" "Yes." `(042926TT.txt:3763)`
- The **"final straw" email** (PX 157, Sept. 20, 2017) — the climactic moment of plaintiffs' direct AND of defense's cross:

> Musk: "Guys, I've had enough. This is the final straw."

- Brockman/Altman reply (per Savitt opening): "you've shown to us that absolute control is extremely important to you." `(042826TT.txt slide deck reference)`
- Altman's "I remain enthusiastic about the nonprofit structure" (PX 158, Sept. 21, 2017) — Musk: "I was foolish enough to believe him." `(042926TT.txt:1647)`

### Tesla / xAI as Musk's own AGI play (the parallel)

The single most damaging line of cross.

- Musk's " **OpenAI to attach to Tesla as its cash cow**" (DX 749, Karpathy reply Musk endorsed). `(042926TT.txt:4762)`
- Musk to Gabe Newell, Nov. 2018 (DX 844): "I lost confidence that OpenAI could muster the resources to serve as an effective counterweight to Google/DeepMind and decided to **attempt that through Tesla instead**." `(042926TT.txt:5170)`
- Musk to Zilis, Feb. 2018 (DX 761): "Close and friendly, but we are going to **actively try to move three or four people from OpenAI to Tesla**." `(042926TT.txt:5232)`
- Musk to Altman/Brockman/Sutskever/Zilis, Dec. 31, 2018 (DX 853): "My probability assessment of OpenAI being relevant to DeepMind/Google without a dramatic change in execution and resources is **zero percent: not 1 percent**." `(042926TT.txt:5371)`
- Musk's March 2026 tweet (DX 1444): " **Tesla will be one of the companies to make AGI** and probably the first to make it in humanoid/atom-shaping form." `(042926TT.txt:2754)`
- Cross on xAI:

> Q. "If xAI achieves its goal of reaching AGI, you will control that AGI; right?"
>
> A. "Well, I think we're not tracking currently to reach AGI before many other companies." `(042926TT.txt:5111)`
>
> Q. "When xAI achieves AGI, you will control it, yes or no?"
>
> A. "I don't know."
>
> Q. "You control it now; right?"
>
> A. "Yes." `(042926TT.txt:5121)`

- Cross's punchline: "But you haven't created an AI nonprofit in those eight years, have you, Mr. Musk?" — A. "No." `(043026TT.txt:2023)`
- Musk concedes xAI "doesn't have any profit caps for its investors." `(043026TT.txt:1997)`
- Musk concedes xAI "started off as a B-corp and then became a C-corp" — and admits "B-corp and a C-corp are pretty much the same thing." `(043026TT.txt:1838)`

### The 2018 "purple box" term sheet

Defense's cleanest "Musk knew, Musk consented" exhibit.

- DX 827 — the OpenAI LP Summary Term Sheet (Aug. 31, 2018): includes a header in a **purple box** warning investors to view the investment "in the spirit of a donation" because there are **no profits expected**.
- Defense theory: this is exactly the structure Musk now claims violated his trust. He didn't sue.
- Musk's response on cross: "I did not look closely at the term sheet... If you see something that says 'in the spirit of a donation,' what do you expect? You expect that the fine print would contradict that?" `(042926TT.txt:6019)`
- Birchall to Zilis on the same term sheet (DX 828): "Pretty plain vanilla for-profit structure. So kind of hard to push a narrative that doesn't involve investors being very focused on ROI." `(043026TT.txt:6682)`
- Birchall's deposition reading: "There was a lot of **posturing and virtue signalling** about it not being an actual for-profit structure." `(043026TT.txt:6777)`

Savitt to Birchall: "You're referring to the **infamous purple box**; is that right, sir?" — Birchall: "I don't know what an 'infamous' purple box is." `(043026TT.txt:6700)`

### The "donor-advised funds" / tax-deduction wrinkle

A defense soft spot: Musk took a tax deduction every step of the way.

- Birchall on cross (Wilson): "For every single one of those donations, it's somewhere in the chain, Mr. Musk was entitled to take a tax deduction?" — A. "Yes, that's the nature of philanthropic giving." `(043026TT.txt:5413)`
- Birchall conceded he is CFO of the Musk Foundation but said, "I'm not familiar with all of the **legalities of donor advised funds**." `(043026TT.txt:5007)` — Wilson: "So you're the CFO of the Musk Foundation, and you can't answer that question?" — A. "I just answered it." `(043026TT.txt:5039)`
- The legal point: once Musk transferred to a DAF, **he could not take the money back** — he could only direct it. This implicates whether he has standing to seek "restitution" for it personally.

* * *

## Mission and meaning

### AGI safety as the original purpose

The reason Musk says he funded OpenAI in the first place.

- The **Larry Page "speciesist"** anecdote — Musk's most-repeated story:

> "I said, 'Well, what if AI wipes out all the humans?' And he said, 'That will be fine as long as artificial intelligence survives.' And I'm, like, well, that's — that's insane." `(042826TT.txt:4828)`
>
> "When he called me a speciesist in front of a dozen people for being pro-human, I was like, this is nuts. We better have some kind of counterpoint to Google." `(042826TT.txt:4844)`

- "We don't want to have a Terminator outcome. I think we want to be in like a Gene Roddenberry movie like 'Star Trek.'" `(042826TT.txt:4870)`
- "My guess is that AI will be probably smarter than any human as soon as next year." `(042826TT.txt:4764)`
- "The biggest risk would be that **AI kills us all**." `(042926TT.txt:6936)`

But the court has bracketed safety:

- " **This is not a trial on the safety risks of artificial intelligence.** ... The question here is whether there was a breach of charitable trust." `(043026TT.txt:817)`
- All **extinction** testimony excluded from plaintiffs' AI expert. `(043026TT.txt:712)`
- "I suspect that there are plenty of people who **don't want to put the future of humanity in Mr. Musk's hands**, but it doesn't matter. We aren't going to get into those issues." `(043026TT.txt:803)`

### The "OPEN" in OpenAI

A live trademark / mission-statement fight. Plaintiffs say "open" meant "open source"; defense said in opening that it didn't.

- Musk on direct: " **The 'OPEN' in OpenAI represents open source.**" `(042826TT.txt:5163)`
- Judge's pointed admonition to OpenAI counsel after openings (jury out): "You seem to suggest that the name OpenAI did not refer to open source, and I would suggest that perhaps you talk to Quinn Emanuel, and I suggest that perhaps you look at the **prosecution history in front of the PTO**... and you do not take inconsistent positions in front of them." `(042826TT.txt:6296)`
- Musk to Savitt on cross: "Without me, OpenAI wouldn't exist. I came up with the name, the idea for the company. I came up with the name, which means open source, **which you, I think, falsely said yesterday it didn't mean open source**. Ironically in this very courtroom, OpenAI argued that OpenAI meant open source." `(042926TT.txt:2873)`

* * *

## The Microsoft thread

### "Captured by Microsoft" (statute-of-limitations fight)

Defense's core SOL evidence.

- Musk's **Sept. 24, 2020 tweet** (PX 251 / DX evidence): "This does seem like the opposite of open. **OpenAI is essentially captured by Microsoft.**" `(042826TT.txt slide / 042926TT.txt:2154)`
- Cohen opening: "Mr. Musk... by September of 2020, he is tweeting that OpenAI is controlled by Microsoft." `(042826TT.txt:3855)`
- Musk's answer: "Sam Altman immediately reached out to reassure me that OpenAI was on its — was staying on mission as a nonprofit." `(042926TT.txt:2194)`
- Microsoft cross of Musk: "And you didn't come to court in 2020, did you?" — A. "No, because he assured me that they were staying on mission..." `(043026TT.txt:2438)`
- Musk on Nadella: "The only reason he's in this thing is because of me. Those are his words." `(042826TT.txt:5544)`

### The November 2023 Altman firing & Microsoft's reaction

A motif Musk returns to as evidence Microsoft "captured" OpenAI.

- "Microsoft's reaction to Altman being fired was to **attempt to higher \[hire\] everyone at OpenAI**, including Altman." `(042926TT.txt:2515)`
- Helen Toner and Tasha McCauley — former OpenAI directors who voted to fire Altman — will testify by video deposition.

* * *

## Evidence battles

### The February 2025 $97.4B xAI bid for OpenAI's assets

The fight that consumed the end of Day 4 and all of Day 5.

- DX 1156 — Musk to Zuckerberg, Feb. 3, 2025: "Are you open to the idea of bidding on the OpenAI IP with me and some others?" `(043026TT.txt:1645)`
- DX 1157 — Toberoff letter to OpenAI board, Feb. 10, 2025 — the $97B bid signed by Musk. `(043026TT.txt:1677)`
- Musk's framing on cross: "Essentially, they were trying to steal a charity and we were trying to stop them." `(043026TT.txt:1745)`

> "It would have been an offer to pay the charity a large amount of money for the assets." `(043026TT.txt:1749)`

- But also: "And you and your fellow investors weren't proposing to spend $97 billion to buy the assets and to **make them a nonprofit and open sourced**, were you?" — A. "No." `(043026TT.txt:1768)`
- Birchall on direct testified the bid was made because "Sam Altman was on both sides of that negotiation." `(043026TT.txt:4718)`
- Defense established Birchall had no first-hand knowledge for that claim.
- The court told Birchall: "I'm still struggling with how you can have conversations with these individuals to raise $97.5 billion, and you have no recollection of the content of those conversations, even in a general sense." `(043026TT.txt:7741)`
- And: "So it was **purely a business deal?**" — Witness: "Yes." `(043026TT.txt:7882)` — collapsing the privilege foundation.
- **Day 5 result: testimony struck.** "Given that this gentleman had no personal knowledge, I'm striking the testimony." `(050126TT.txt:339)`

### The Pioneer Building

The San Francisco office Musk leased for OpenAI — and the central piece of evidence for plaintiffs' alternative § 17510.6 charitable-solicitation theory.

- Lessee under the master lease: **Musk Industries LLC** (a passthrough vehicle), not OpenAI. `(043026TT.txt:4078)`
- DX 539, June 2016 Musk to Birchall: "I don't want Sam on the lease." `(043026TT.txt:5787)`
- DX 600, Birchall to Sam Teller, Jan. 2017: "Elon holds **100 percent of the power and authority** regarding the building." `(043026TT.txt:5829)`
- Neuralink shared the building rent-free until OpenAI's auditors raised an issue (DX 849, "to pass nonprofit audits"). `(043026TT.txt:6381)`
- DX 857, Jan. 2019: OpenAI initially asked $3.7M reimbursement for 2017–2018; Musk countered $1.25M ("approximately two-thirds cut"). `(043026TT.txt:6452)`
- PX 103, July 2020 Clark email: OpenAI for-profit "happy to cover 100 percent of the rent." This is the email plaintiffs use as the alleged 2020 "solicitation" that would defeat the statute of limitations.

* * *

## From the bench

### The judge's framing — what this case actually is

- "This is not a trial on the safety risks of artificial intelligence... The question here is whether there was a breach of charitable trust." `(043026TT.txt:817)`
- "There is no separate cause of action for unjust enrichment. The only thing you find in California law is **a claim of restitution under a theory of unjust enrichment**." `(050126TT.txt:1473)`
- "Mr. Musk's notion that somehow he wants something different, I don't know that he can do that because it's a claim for restitution. And the elements of restitution say that **it goes back to the plaintiff**." `(050126TT.txt:1446)`
- The unspoken implication: even if plaintiffs win on liability, the $38M may go back to Musk personally — not to a "restored" charity.

* * *

## The Brockman journal — and the fight over how to read it

### Brockman's own words

A theme that emerged on Day 6 and consumed the whole of Day 7 lives entirely in **Greg Brockman's contemporaneous personal journal** (PX 151, 154, 161, 163; DX 1252), kept on his laptop since 2010 and produced in discovery — **460 pages**, of which roughly **100 cover the August–September 2017 negotiation window** alone. See [Brockman Journal](https://trial.mts.now/wiki/brockman-journal) for every passage put to him on the stand. The journal contains, in his own handwriting:

- **The "morally bankrupt" line.** "It'd be wrong to steal the nonprofit from him. To convert to B Corp without him. They'd be pretty morally bankrupt. And he's really not an idiot." (Nov 6, 2017 — PX 161) _(5/4/2026 Testimony @ ~10:38 PT; re-read 5/5/2026 Testimony @ ~10:31 PT)_
- **The "lie" line.** Same entry, three pages earlier: "Cannot say that we are committed to the nonprofit. Don't wanna say that we're committed if three months later we're doing a B Corp, that it was a lie." _(5/4/2026 Testimony @ ~11:18 PT; re-read 5/5/2026 Testimony @ ~10:35 PT)_
- **The "get out from under Elon" line.** "This is the only chance we have to get out from under Elon. … We truly have a chance to make this happen financially, take me to $1,000,000,000." (Aug 21, 2017 — PX 151) _(5/4/2026 Testimony @ ~11:23 PT)_
- **The "flip to a full profit" line.** "It would be nice to be making the billions. … We've been thinking that maybe we should just flip to a full profit. Making money for us sounds great." (Nov 12, 2017 — PX 163, written six days after telling Musk in person that he wanted to keep fundraising for the nonprofit) _(5/4/2026 Testimony @ ~11:21 PT)_
- **The "moral high ground" line — quoted as Musk's own words.** "Elon. Coming weeks, top priority. … Must tell the story and not lose moral high ground. Absolutely vital." (Sept 12, 2017 — PX 154) _(5/5/2026 Testimony @ ~09:22 PT)_
- **Brockman's live characterization.** "It's an expression of frustration, not a plan." Followed immediately by Kry: "How many times did you rehearse that?" _(5/4/2026 Testimony @ ~11:22 PT)_

### The defense's recontextualization — and DX 1252

On Day 7's redirect, Mr. Gerrada introduced **DX 1252**, a **November 5, 2017** entry, **admitted over Mr. Molo's hearsay objection as a prior consistent statement under FRE 801(d)(1)(B)** to rebut Molo's express charge of recent fabrication. The jury heard, in Brockman's own voice, two passages he had never previously read aloud:

- " **Real decision is fire Elon.**" (Bates 462) _(5/5/2026 Testimony @ ~13:05 PT)_
- " **So we seem converged on the Fire Elon route.**" (Bates 463) _(5/5/2026 Testimony @ ~13:05 PT)_

Brockman's defense reading is that " **morally bankrupt**" referred to _voting to remove Musk from the OpenAI board and then creating a B Corp without him_ — not to the for-profit conversion as such. DX 1252 is the corroborating contemporaneous evidence that "fire Elon" was the live decision in the room.

### Plaintiffs' reading — Mr. Molo's recross frame

> Mr. Molo: " **It's just an after-the-fact manufactured excuse for the very honest emotion that you expressed in the journal at the time.**" _(5/5/2026 Testimony @ ~14:08 PT)_

The journal is, on plaintiffs' theory, a **contemporaneous record of intent** to push Musk out and convert OpenAI to a for-profit while publicly maintaining commitment to the nonprofit. It is also the only contemporaneous, internal-to-OpenAI document in evidence that addresses honesty and motive in 2017–2018 — every other communication of that period is either an email between Musk and the founders (where the founders were addressing Musk directly) or a public-facing artifact (the Charter, blog posts, the IRS filings).

### The "$30 billion" set piece

> Mr. Molo: "Before this trial, did you think it was just okay to take the assets of the nonprofit and create a for-profit for which **you would put in no money and walk away with $30,000,000,000**?" _(5/5/2026 Testimony @ ~14:14 PT)_

> Mr. Molo: "Well, you had **$30 billion**. **Couldn't you have given the nonprofit some money to carry out its nonprofit activities** if the mission was so important to you?" — A: " **I did not donate cash to the nonprofit. No.**" _(5/5/2026 Testimony @ ~14:24 PT)_

* * *

## Day 7 — the Microsoft economics

### "$250 billion" — the target redemption stack

The defense's Robert Wu 30(b)(6) deposition was the first time the actual numbers landed in evidence. On the page, the legal architecture of OpenAI is a stack of redemption preferences:

- **Microsoft's 2019 round:** $1B in, **$20B target redemption**.
- **Microsoft's 2023 round:** $10B in (cash + Azure compute), **$60B target redemption — a 6× return**. _(5/5/2026 Testimony @ ~15:11 PT)_
- **All LPs combined:** " **Back-of-the-napkin … the total target redemption amounts for all of the limited partners, including the nonprofit, and Microsoft, rounded to $250,000,000,000.** And the residual, the nonprofit specific residual interest **would not be paid until those target redemption amounts**." _(5/5/2026 Testimony @ ~15:16 PT)_
- **The 20% annual escalator** — the target redemption amount **increases 20% per fiscal year starting 2025**, so the ceiling moves up over time and the nonprofit's path to a residual gets steeper, not flatter. _(5/5/2026 Testimony @ ~15:16 PT)_
- **No quantitative analysis** done by the board for the 6× return — Wu, twice: " **I don't know.**" / " **I don't know about specific financial modeling.**" _(5/5/2026 Testimony @ ~15:13 PT)_

### The 2023 JDCA — Microsoft licensed everything except AGI

> " **It does appear that OpenAI Inc., OpCo, licensed \[Microsoft\] all IP and technology as defined in this agreement excluding only AGI.**" _(5/5/2026 Testimony @ ~15:17 PT)_

This is the carveout the 2018 Charter promised. It is, until the **Watershed MOU** lands, the structural bulwark of OpenAI's "we're still on mission" defense.

### The Watershed MOU — and the AGI carveout dissolving

Wu authenticated the **Watershed MOU**, the non-binding term sheet for the next OpenAI–Microsoft restructuring:

> "Under the Watershed construct, **Microsoft would receive — once there is a determination that there is AGI through this third-party panel — certain access to certain product IP**." _(5/5/2026 Testimony @ ~15:20 PT)_

If the Watershed MOU is signed in its current form, the 2018 Charter's "AGI is excluded from any commercial license" guarantee no longer holds in the way it did when Brockman wrote his Jan 31, 2020 email asserting that " **our fiduciary duty should be to humanity**." The plaintiffs' theory of breach gains a 2026-vintage supporting fact.

### The September 2024 "uncapped stock" plan

Wu confirmed that as early as **April or May 2024**, OpenAI's **mission strategy committee** had begun considering a structure that was " **not a bespoke capped-profit structure, but more of a traditional stock corporation**" — explicitly, " **converting the LLC waterfall into a more traditional corporate stock ownership capital structure**" where " **stock that investors, employees, or others hold, would not be subject to a particular cap on profit distributions**." _(5/5/2026 Testimony @ ~15:14–15:15 PT)_

This is the structural change Musk's cross-papers refer to as "removing the cap." Wu's testimony provides the **internal-board-process timeline** for that decision — months earlier than OpenAI's public communications had indicated.

### "OpenAI Inc. has no full-time employees"

> Q: "Does OpenAI Inc. have any full-time employees?" — A: " **I don't believe it has any full time employees** \[other than\] the board of directors, and **Sam is the CEO**." _(5/5/2026 Testimony @ ~15:09 PT)_

A small, surgical fact for plaintiffs' charitable-trust theory: the entity that holds the "fiduciary duty to humanity" has, in 2026, no operational staff of its own.

### The September 22, 2017 funding ultimatum (PX 157)

> Musk: "Either go do something on your own or continue with OpenAI as a nonprofit. **I will no longer fund OpenAI until you have made a firm commitment to stay.** Or I'm just being a fool who is essentially providing free funding for you to create a startup."

Brockman recorded the post‑meeting in his own journal: "His story will correctly be that we weren't honest with him in the end about still wanting to do the for‑profit just without him." _(Day 6 @ ~11:12 and ~11:19 PT)_

### Charter 2.0 (PX 359, December 2023)

The same year as the **$10 billion** Microsoft investment, Brockman emailed Sam Altman, Jason Kwon and the OpenAI board (Larry Summers, Brett Taylor, Adam D'Angelo) attaching a redrafted **"Charter 2.0"**. The 2018 Charter said OpenAI's "primary fiduciary duty is to humanity"; Charter 2.0 removed that line and added: "We've grown to regard capitalism not as a constraint, but instead as a positive force." Never published.

- "Did this lawsuit prevent you from publishing the new charter?" — **"No."**
- "I've honestly never really been certain what I'm being sued for." — Brockman _(Day 6 @ ~12:04 PT)_

### The defense's 2026 valuation

Surfaced in passing today: the OpenAI for‑profit's most recent post‑money valuation is **$840 billion**, Microsoft's stake is worth **~$200 billion**, and OpenAI is exploring an **IPO**. The OpenAI Foundation (the nonprofit) holds ~$150–200B in PBC equity and funds AI‑resilience and ARC Institute Alzheimer's research. _(Day 6 @ ~12:08–12:22 PT)_

### Russell's risk taxonomy as the AGI‑safety throughline

Stuart Russell's direct on Day 6 gave the jury its first organized presentation of the **AI‑risk landscape** — discrimination, AI psychosis, biorisk, cyber misuse, disinformation, the "cancer‑cure" misalignment example, and the winner‑take‑all dynamics of AGI. The court kept him strictly inside his expert report; cross by OpenAI (Frentzen) and Microsoft (Gerrado) locked in that he was offering _no opinion_ about OpenAI's actual safety practices, governance, structure, or partnership with Microsoft, and that his $235K in compensation represents ~20% of his annual income.

- The closing redirect, two questions only:
- "Were you asked to do anything other than provide an opinion to explain to the jury the safety risks associated with artificial intelligence?" — **No.**
- "To your knowledge, is Mr. Musk an AI scientist?" — **"No. He's not."** _(Day 6 @ ~08:54 PT)_

See [the Day 6 digest](https://trial.mts.now/day/6) for full citations and the embedded searchable transcript.